--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <section class="text-gray-400 bg-gray-900 body-font">
         <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
           <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 md:mb-0 mb-10">
-            <img class="object-cover object-center rounded" alt="hero" src="/Users/yanakaveramma/Desktop/BDA/Sem 3/Machine Learning/cover.png">
+            <img class="object-cover object-center rounded" alt="hero" src="{{ url_for('static', filename='cover.png') }}">
           </div>
           <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
             <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white">Credit Card Approval
@@ -37,7 +37,6 @@
         <div class="container px-5 py-24 mx-auto">
           <div class="flex flex-wrap w-full mb-20 flex-col items-center text-center">
             <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 text-white">Features</h1>
-            <!-- <p class="lg:w-1/2 w-full leading-relaxed text-opacity-80">Whatever cardigan tote bag tumblr hexagon brooklyn asymmetrical gentrify, subway tile poke farm-to-table.</p> -->
           </div>
           <div class="flex flex-wrap -m-4">
             <div class="xl:w-1/3 md:w-1/2 p-4">
@@ -112,7 +111,15 @@
                 <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-white">Now, it's your predictor</h1>
                 <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Now, Use the Predictor! .</p>
               </div>
-              <div class="flex lg:w-2/3 w-full sm:flex-row flex-col mx-auto px-8 sm:px-0 items-end sm:space-x-4 sm:space-y-0 space-y-4">
+              <div class="flex w-full sm:flex-row flex-col mx-auto px-8 sm:px-0 items-end sm:space-x-4 sm:space-y-0 space-y-4">
+                {% for feature in feature_set_1 %}
+                <div class="relative sm:mb-0 flex-grow w-full">
+                  <label for="{{feature.id}}" class="leading-7 text-sm text-gray-400">{{ feature.name | replace("_", " ") }}</label>
+                  <input type="text" id="{{feature.id}}" name="{{feature.id}}" class="w-full bg-gray-800 bg-opacity-40 rounded border border-gray-700 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-900 focus:bg-transparent text-base outline-none text-gray-100 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out" required>
+                </div>
+                {% endfor %}
+              </div>
+              <!-- <div class="flex w-full sm:flex-row flex-col mx-auto px-8 sm:px-0 items-end sm:space-x-4 sm:space-y-0 space-y-4">
                 <div class="relative sm:mb-0 flex-grow w-full">
                   <label for="Children" class="leading-7 text-sm text-gray-400">No. of children</label>
                   <input type="text" id="Children" name="Children" class="w-full bg-gray-800 bg-opacity-40 rounded border border-gray-700 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-900 focus:bg-transparent text-base outline-none text-gray-100 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
@@ -153,14 +160,14 @@
                 <label for="Male" class="leading-7 text-sm text-gray-400">Gender - Male</label>
                 <input type="text" id="Male" name="Male" class="w-full bg-gray-800 bg-opacity-40 rounded border border-gray-700 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-900 focus:bg-transparent text-base outline-none text-gray-100 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
               </div> 
-              <!--<div class="relative sm:mb-0 flex-grow w-full">
-                <label for="CarNo" class="leading-7 text-sm text-gray-400">Car - No</label>
-                <input type="text" id="CarNo" name="CarNo" class="w-full bg-gray-800 bg-opacity-40 rounded border border-gray-700 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-900 focus:bg-transparent text-base outline-none text-gray-100 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+              <div class="relative sm:mb-0 flex-grow w-full">
+                <label for="CNo" class="leading-7 text-sm text-gray-400">Car - No</label>
+                <input type="text" id="CNo" name="CNo" class="w-full bg-gray-800 bg-opacity-40 rounded border border-gray-700 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-900 focus:bg-transparent text-base outline-none text-gray-100 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
               </div> 
               <div class="relative sm:mb-0 flex-grow w-full">
-                <label for="CarYes" class="leading-7 text-sm text-gray-400">Car - Yes</label>
-                <input type="text" id="CarYes" name="CarYes" class="w-full bg-gray-800 bg-opacity-40 rounded border border-gray-700 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-900 focus:bg-transparent text-base outline-none text-gray-100 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
-              </div> -->
+                <label for="CYes" class="leading-7 text-sm text-gray-400">Car - Yes</label>
+                <input type="text" id="CYes" name="CYes" class="w-full bg-gray-800 bg-opacity-40 rounded border border-gray-700 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-900 focus:bg-transparent text-base outline-none text-gray-100 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+              </div>
               <div class="relative sm:mb-0 flex-grow w-full">
                 <label for="RealtyNo" class="leading-7 text-sm text-gray-400">Realty - No</label>
                 <input type="text" id="RealtyNo" name="RealtyNo" class="w-full bg-gray-800 bg-opacity-40 rounded border border-gray-700 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-900 focus:bg-transparent text-base outline-none text-gray-100 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
@@ -169,7 +176,7 @@
                 <label for="RealtyYes" class="leading-7 text-sm text-gray-400">Realty - Yes</label>
                 <input type="text" id="RealtyYes" name="RealtyYes" class="w-full bg-gray-800 bg-opacity-40 rounded border border-gray-700 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-900 focus:bg-transparent text-base outline-none text-gray-100 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
               </div>
-            </div>  
+            </div>   -->
           </section>     
         </div> 
 
@@ -179,7 +186,15 @@
                 <div class="flex flex-col text-center w-full mb-12">
                   <p class="lg:w-2/3 mx-auto leading-relaxed text-base"> Choose appropreiate Income Type (IT), Education Type (ET) and Relationship Type(RT). (Mark 1 if true else 0) </p>
                 </div>
-              <div class="flex lg:w-2/3 w-full sm:flex-row flex-col mx-auto px-8 sm:px-0 items-end sm:space-x-4 sm:space-y-0 space-y-4">
+                <div class="flex w-full sm:flex-row flex-col mx-auto px-8 sm:px-0 items-end sm:space-x-4 sm:space-y-0 space-y-4">
+                  {% for feature in feature_set_2 %}
+                <div class="relative sm:mb-0 flex-grow w-full">
+                  <label for="{{feature.id}}" class="leading-7 text-sm text-gray-400">{{ feature.name | replace("_", " ") }}</label>
+                  <input type="text" id="{{feature.id}}" name="{{feature.id}}" class="w-full bg-gray-800 bg-opacity-40 rounded border border-gray-700 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-900 focus:bg-transparent text-base outline-none text-gray-100 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out" required>
+                </div>
+                {% endfor %}
+                </div>
+              <!-- <div class="flex w-full sm:flex-row flex-col mx-auto px-8 sm:px-0 items-end sm:space-x-4 sm:space-y-0 space-y-4">
                 <div class="relative sm:mb-0 flex-grow w-full">
                   <label for="Associate" class="leading-7 text-sm text-gray-400">IT - Commercial Associate</label>
                   <input type="text" id="Associate" name="Associate" class="w-full bg-gray-800 bg-opacity-40 rounded border border-gray-700 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-900 focus:bg-transparent text-base outline-none text-gray-100 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
@@ -196,6 +211,10 @@
               <div class="relative sm:mb-0 flex-grow w-full">
                 <label for="Working" class="leading-7 text-sm text-gray-400">IT - Working</label>
                 <input type="text" id="Working" name="Working" class="w-full bg-gray-800 bg-opacity-40 rounded border border-gray-700 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-900 focus:bg-transparent text-base outline-none text-gray-100 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+              </div>  
+              <div class="relative sm:mb-0 flex-grow w-full">
+                <label for="AcademicDegree" class="leading-7 text-sm text-gray-400">Academic Degree</label>
+                <input type="text" id="AcademicDegree" name="AcademicDegree" class="w-full bg-gray-800 bg-opacity-40 rounded border border-gray-700 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-900 focus:bg-transparent text-base outline-none text-gray-100 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
               </div>  
               <div class="relative sm:mb-0 flex-grow w-full">
                 <label for="HighEd" class="leading-7 text-sm text-gray-400">ET - Higher education</label>
@@ -233,7 +252,7 @@
                 <label for="Widow" class="leading-7 text-sm text-gray-400">RT - Widow</label>
                 <input type="text" id="Widow" name="Widow" class="w-full bg-gray-800 bg-opacity-40 rounded border border-gray-700 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-900 focus:bg-transparent text-base outline-none text-gray-100 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
               </div> 
-            </div>  
+            </div>   -->
           </section>     
         </div> 
 
@@ -243,7 +262,15 @@
               <div class="flex flex-col text-center w-full mb-12">
                 <p class="lg:w-2/3 mx-auto leading-relaxed text-base"> Choose the Appropriate Housing Type (Mark 1 if true else mark 0)</p>
               </div>
-              <div class="flex lg:w-2/3 w-full sm:flex-row flex-col mx-auto px-8 sm:px-0 items-end sm:space-x-4 sm:space-y-0 space-y-4">
+              <div class="flex w-full sm:flex-row flex-col mx-auto px-8 sm:px-0 items-end sm:space-x-4 sm:space-y-0 space-y-4">
+                {% for feature in feature_set_3 %}
+              <div class="relative sm:mb-0 flex-grow w-full">
+                <label for="{{feature.id}}" class="leading-7 text-sm text-gray-400">{{ feature.name | replace("_", " ") }}</label>
+                <input type="text" id="{{feature.id}}" name="{{feature.id}}" class="w-full bg-gray-800 bg-opacity-40 rounded border border-gray-700 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-900 focus:bg-transparent text-base outline-none text-gray-100 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out" required>
+              </div>
+              {% endfor %}
+              </div>
+              <!-- <div class="flex w-full sm:flex-row flex-col mx-auto px-8 sm:px-0 items-end sm:space-x-4 sm:space-y-0 space-y-4">
                 <div class="relative sm:mb-0 flex-grow w-full">
                   <label for="Co-op" class="leading-7 text-sm text-gray-400">Co-op apartment</label>
                   <input type="text" id="Co-op" name="Co-op" class="w-full bg-gray-800 bg-opacity-40 rounded border border-gray-700 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-900 focus:bg-transparent text-base outline-none text-gray-100 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
@@ -269,7 +296,7 @@
                 <label for="Parents" class="leading-7 text-sm text-gray-400">With Parents</label>
                 <input type="text" id="Parents" name="Parents" class="w-full bg-gray-800 bg-opacity-40 rounded border border-gray-700 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-900 focus:bg-transparent text-base outline-none text-gray-100 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
               </div>  
-            </div>  
+            </div>   -->
           </section>     
         </div> 
 
@@ -280,7 +307,15 @@
               <div class="flex flex-col text-center w-full mb-12">
                 <p class="lg:w-2/3 mx-auto leading-relaxed text-base"> Choose the Appropriate Occupation Type (Mark 1 if true else mark 0)</p>
               </div>
-              <div class="flex lg:w-2/3 w-full sm:flex-row flex-col mx-auto px-8 sm:px-0 items-end sm:space-x-4 sm:space-y-0 space-y-4">
+              <div class="flex w-full sm:flex-row flex-col mx-auto px-8 sm:px-0 items-end sm:space-x-4 sm:space-y-0 space-y-4">
+                {% for feature in feature_set_4 %}
+              <div class="relative sm:mb-0 flex-grow w-full">
+                <label for="{{feature.id}}" class="leading-7 text-sm text-gray-400">{{ feature.name | replace("_", " ") }}</label>
+                <input type="text" id="{{feature.id}}" name="{{feature.id}}" class="w-full bg-gray-800 bg-opacity-40 rounded border border-gray-700 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-900 focus:bg-transparent text-base outline-none text-gray-100 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out" required>
+              </div>
+              {% endfor %}
+              </div>
+              <!-- <div class="flex w-full sm:flex-row flex-col mx-auto px-8 sm:px-0 items-end sm:space-x-4 sm:space-y-0 space-y-4">
                 <div class="relative sm:mb-0 flex-grow w-full">
                   <label for="Accountants" class="leading-7 text-sm text-gray-400">Accounts</label>
                   <input type="text" id="Accountants" name="Accountants" class="w-full bg-gray-800 bg-opacity-40 rounded border border-gray-700 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-900 focus:bg-transparent text-base outline-none text-gray-100 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
@@ -318,6 +353,10 @@
                   <input type="text" id="Laborers" name="Laborers" class="w-full bg-gray-800 bg-opacity-40 rounded border border-gray-700 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-900 focus:bg-transparent text-base outline-none text-gray-100 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
                 </div>
                 <div class="relative sm:mb-0 flex-grow w-full">
+                  <label for="LowSkillLaborers" class="leading-7 text-sm text-gray-400">Low Skill Labor</label>
+                  <input type="text" id="LowSkillLaborers" name="LowSkillLaborers" class="w-full bg-gray-800 bg-opacity-40 rounded border border-gray-700 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-900 focus:bg-transparent text-base outline-none text-gray-100 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+                </div>
+                <div class="relative sm:mb-0 flex-grow w-full">
                   <label for="skill" class="leading-7 text-sm text-gray-400">Low-skill Labor</label>
                   <input type="text" id="skill" name="skill" class="w-full bg-gray-800 bg-opacity-40 rounded border border-gray-700 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-900 focus:bg-transparent text-base outline-none text-gray-100 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
                 </div>
@@ -353,7 +392,7 @@
                 <label for="WB" class="leading-7 text-sm text-gray-400">Waitress</label>
                 <input type="text" id="WB" name="WB" class="w-full bg-gray-800 bg-opacity-40 rounded border border-gray-700 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-900 focus:bg-transparent text-base outline-none text-gray-100 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
               </div>  
-            </div>  
+            </div>   -->
           </section>     
         </div> 
         <section class="text-gray-400 body-font bg-gray-900">
